Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6304

crash on umount in cleanup_resource

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 17648

      [612904.543769] general protection fault: 0000 1 SMP
      [612904.549534] last sysfs file: /sys/devices/pci0000:00/0000:00:02.0/0000:02:00.0/host6/phy-6:7/sas_phy/phy-6:7/negotiated_linkrate
      [612904.562743] CPU 3
      ...
      [612904.664208] Pid: 80987, comm: umount Not tainted 2.6.32-220.7.1.el6.lustre.4026.x86_64 #1 Intel Corporation S2600JF/S2600JF
      [612904.676984] RIP: 0010:[<ffffffffa074f37f>] [<ffffffffa074f37f>] cleanup_resource+0x1f/0x310 [ptlrpc]
      [612904.687602] RSP: 0018:ffff88078196d8f8 EFLAGS: 00010292
      [612904.693721] RAX: 5a5a5a5a5a5a5a5a RBX: ffff8807928db200 RCX: ffff88078196da40
      [612904.701968] RDX: 0000002000000000 RSI: ffff8807928db220 RDI: ffff8807928db200
      [612904.710211] RBP: ffff88078196d948 R08: 000000000000000e R09: 000000000000f0e6
      [612904.718448] R10: 0000000000000000 R11: 8730000000000000 R12: ffff8807928db220
      [612904.726691] R13: 0000000000012ff8 R14: 0000000000000000 R15: 0000002000000000
      [612904.734928] FS: 00007ff650e5c740(0000) GS:ffff880044660000(0000) knlGS:0000000000000000
      [612904.744235] CS: 0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      [612904.750841] CR2: 00007f71f3dddaf0 CR3: 0000000e50fef000 CR4: 00000000000406e0
      [612904.759082] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [612904.767315] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
      [612904.775563] Process umount (pid: 80987, threadinfo ffff88078196c000, task ffff8807ab342ac0)
      [612904.785164] Stack:
      [612904.787594] 0000000000000000 ffff88078196d9b8 ffff88078196d918 ffffffffa046c36e
      [612904.795896] <0> ffff88078196d958 ffff8807928db200 0000002000000000 0000000000012ff8
      [612904.806188] <0> 0000000000000000 ffff88078196d9b8 ffff88078196d968 ffffffffa074f69f
      [612904.815367] Call Trace:
      [612904.818300] [<ffffffffa046c36e>] ? cfs_hash_spin_lock+0xe/0x10 [libcfs]
      [612904.825991] [<ffffffffa074f69f>] ldlm_resource_clean+0x2f/0x60 [ptlrpc]
      [612904.833672] [<ffffffffa046c5ff>] cfs_hash_for_each_relax+0x17f/0x380 [libcfs]
      [612904.842035] [<ffffffffa074f670>] ? ldlm_resource_clean+0x0/0x60 [ptlrpc]
      [612904.849819] [<ffffffffa074f670>] ? ldlm_resource_clean+0x0/0x60 [ptlrpc]
      [612904.857601] [<ffffffffa046e01f>] cfs_hash_for_each_nolock+0x7f/0x1c0 [libcfs]
      [612904.865969] [<ffffffffa074c0be>] ldlm_namespace_cleanup+0x2e/0xc0 [ptlrpc]
      [612904.873949] [<ffffffffa074d1e4>] __ldlm_namespace_free+0x54/0x540 [ptlrpc]
      [612904.881939] [<ffffffffa05ec05c>] ? llog_cleanup+0xac/0x490 [obdclass]
      [612904.889436] [<ffffffffa074d70f>] ldlm_namespace_free_prior+0x3f/0x200 [ptlrpc]
      [612904.897882] [<ffffffffa0cd3bda>] mdt_device_fini+0x8a/0x600 [mdt]
      [612904.904988] [<ffffffffa0613237>] class_cleanup+0x577/0xdc0 [obdclass]
      [612904.912480] [<ffffffffa061522b>] class_process_config+0x102b/0x1bf0 [obdclass]
      [612904.920915] [<ffffffffa045b9f3>] ? cfs_alloc+0x63/0x90 [libcfs]
      [612904.927819] [<ffffffffa060f9e3>] ? lustre_cfg_new+0x353/0x7e0 [obdclass]
      [612904.935598] [<ffffffffa0615f69>] class_manual_cleanup+0x179/0x6f0 [obdclass]
      [612904.943849] [<ffffffffa06208e8>] server_put_super+0xb58/0x1020 [obdclass]
      [612904.951722] [<ffffffff81191836>] ? invalidate_inodes+0xf6/0x190
      [612904.958613] [<ffffffff81178b8b>] generic_shutdown_super+0x5b/0xe0
      [612904.965707] [<ffffffff81178c76>] kill_anon_super+0x16/0x60
      [612904.972128] [<ffffffffa0617bd6>] lustre_kill_super+0x36/0x60 [obdclass]
      [612904.979802] [<ffffffff81179c00>] deactivate_super+0x70/0x90
      [612904.986311] [<ffffffff81195b8f>] mntput_no_expire+0xbf/0x110
      [612904.992917] [<ffffffff8119662b>] sys_umount+0x7b/0x3a0
      [612904.998941] [<ffffffff810815a1>] ? sigprocmask+0x71/0x110
      [612905.005256] [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b
      [612905.012154] Code: 04 00 e8 95 ba d0 ff 0f 1f 44 00 00 55 48 89 e5 41 57 41 56 41 55 41 54 53 48 83 ec 28 0f 1f 44 00 00 48 8b 07 49 89 f4 49 89 d7 <48> 8b 00 48 85 c0 0f 84 aa 02 00 00 8b 40 08 89 45 b4 83 e0 fc
      [612905.034659] RIP [<ffffffffa074f37f>] cleanup_resource+0x1f/0x310 [ptlrpc]
      [612905.042547] RSP <ffff88078196d8f8>

            wc-triage WC Triage
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: