lustre/ldlm/ldlm_internal.h
@@ -123,7 +123,6 @@ extern struct kmem_cache *ldlm_resource_slab;
 extern struct kmem_cache *ldlm_lock_slab;
 extern struct kmem_cache *ldlm_interval_tree_slab;
 
-int ldlm_resource_putref_locked(struct ldlm_resource *res);
 void ldlm_resource_insert_lock_after(struct ldlm_lock *original,
                                      struct ldlm_lock *new);
 
